# Synapse

./: .env.example  .env.synapse  .firebaserc  .gitignore  Dockerfile  PATCHES_PHASE1.md  README.md  SYNAPSE_v4_SPEC.md  cloud-run-service.yaml  firebase.json  firestore.rules  lmsys_arena_leaderboard.json  main.py  mypy.ini  pyproject.toml  understand.md
.github/workflows/: background_scrape.yml  ci.yml  daily_ingest.yml  weekly_archive.yml  weekly_eval.yml
admin/: __init__.py  review_queue.py
api/: __init__.py  groq_manager.py  main.py  middleware.py  query.py  semantic_cache.py
budget/: dynamodb.py  fallback_chains.yaml  oracle.py  prompt_caching.py  register.py  scheduler.py  sqs_queue.py
config/: thresholds.yaml
deploy/: README.md  deploy_cloud_run.sh
docs/: groq_key_rotation.md
domains/: __init__.py
embedding/: __init__.py  generator.py  onnx_generator.py  qdrant_client.py
eval/: ragas_monitor.py
export/: __init__.py  graph_exporter.py
frontend/: .env.production  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
ingestion/: __init__.py  circuit_breaker.py  circuit_breaker_state.json  circuit_breaker_wrapper.py  embedding_pipeline.py  generic_source.py  semantic_similarity.py  source_factory.py
mcp/: __init__.py  client.py  tool_registry.py
nlp/: opencv_processor.py  spacy_pipeline.py
prompt/: __init__.py  assembler.py
providers/: __init__.py  groq_provider.py  local_provider.py  protocol.py
query/: __init__.py  nl_to_cypher.py
retrieval/: index_builder.py  query_engines.py  session_index.py  web_research_cache.py
schema/: __init__.py  config.py  domain_loader.py  models.py  setup.py
scripts/: README.md  add_source.sh  check_apis.py  check_graph.py  check_timestamps.py  inspect_graph.py  list_groq_models.py  setup_env.py  setup_pgvector.py  source_config_generator.py  start_synapse.sh  start_synapse_uv.sh  test_groq.py  test_query.py  test_query2.py  verify_fixes.py
seed/: __init__.py  run.py
sync/: __init__.py  __main__.py  background_scraper.py  reject_log.jsonl
tests/: conftest.py  test_bug_fixes.py  test_config.py  test_domain_loader.py  test_integration_circuit_breaker.py  test_integration_export.py  test_integration_firestore.py  test_integration_groq_keys.py  test_integration_langgraph.py  test_integration_mcp.py  test_integration_neo4j.py  test_integration_pgvector.py  test_integration_prompt_registry.py  test_integration_semantic_cache.py  test_integration_sse.py  test_leaderboard.py  test_query_planner.py  test_registry.py
webhook/: __init__.py  dispatcher.py  registry.py
(+69 files in other folders)
