[project]
name = "synapse"
version = "4.0.0"
description = "SYNAPSE - Systematic, Networked, Yet Natural, Automated, Provenance-aware Schema Engine: A live, relational, domain-agnostic knowledge intelligence platform with multi-agent reasoning"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core async and HTTP
    "httpx>=0.27.0,<1.0",
    # Graph database
    "neo4j>=5.18.0,<6.0",
    # Vector database
    "qdrant-client>=1.7.0,<2.0",
    # PostgreSQL (checkpoint DB)
    "psycopg[binary]>=3.1.0,<4.0",
    "asyncpg>=0.29.0,<1.0",
    # LLM providers
    "groq>=0.9.0,<2.0",
    # Agent frameworks (LangGraph multi-agent)
    "langgraph>=0.3.0,<1.0",
    "langchain>=0.3.0,<1.0",
    "langchain-core>=0.3.0,<1.0",
    # API framework
    "fastapi>=0.115.0,<1.0",
    "uvicorn[standard]>=0.32.0,<1.0",
    "pydantic>=2.9.0,<3.0",
    "python-multipart>=0.0.9,<1.0",
    # Data processing
    "feedparser>=6.0.11,<7.0",
    "xmltodict>=0.13.0,<1.0",
    "pyyaml>=6.0.2,<7.0",
    # Embeddings and search
    "sentence-transformers>=3.1.0,<4.0",
    # Utilities
    "python-dotenv>=1.0.1,<2.0",
    "aiofiles>=24.1.0,<25.0",
    "tenacity>=9.0.0,<10.0",
    # PDF processing (for Gemini multimodal)
    "pypdf>=5.0.0,<6.0",
    "pillow>=10.4.0,<11.0",
    # Security
    "cryptography>=42.0.0,<44.0",
    # v4.0 additions
    "tiktoken>=0.7.0,<1.0",
    "rank-bm25>=0.2.2,<1.0",
    "duckduckgo-search>=6.0.0,<7.0",
    "aiohttp>=3.9.0,<4.0",
    "spacy>=3.7.0,<4.0",
    "opencv-python-headless>=4.9.0,<5.0",
    "boto3>=1.34.0,<2.0",
    "crawl4ai>=0.4.0,<1.0",
    "tavily-python>=0.3.0,<1.0",
    "optimum[onnxruntime]>=1.20.0,<2.0",
    "youtube-search-python>=1.6.0,<2.0",
    "ragas>=0.3.2,<1.0",
    "pyarrow>=17.0,<18.0",
    "langchain-groq>=1.1.2,<2.0",
    "langchain-huggingface>=1.2.2,<2.0",
]
[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "black>=24.8.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["schema", "ingestion", "api", "seed", "domains", "admin", "embedding", "webhook", "budget", "providers", "prompt", "reasoning", "retrieval", "mcp", "nlp", "sync", "config", "eval"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"
